--- a/package.json
+++ b/package.json
@@ -9,10 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "cloudinary": "^2.0.3",
+    "mapbox-gl": "^3.2.0",
+    "mongodb": "^6.4.0",
+    "mongoose": "^8.2.1",
     "next": "14.1.1",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.0.1"
+    "react-geocode": "1.0.0-alpha.1",
+    "react-icons": "^5.0.1",
+    "react-map-gl": "^7.1.7",
+    "react-photoswipe-gallery": "^3.0.1",
+    "react-share": "^5.1.0",
+    "react-spinners": "^0.13.8",
+    "react-toastify": "^10.0.4",
+    "spinners": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.0.1",
